# SensorMonitor-MQTT

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
common/: CMakeLists.txt  MosqQtClient.cpp  MosqQtClient.h  Topics.h  Utils.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
simulator/: CMakeLists.txt  main.cpp
